tests/contract_testcases/polkadot/structs/parse_structs_05.sol

        contract test_struct_parsing {
            struct Foo {
                boolean x;
            }
        }
// ---- Expect: diagnostics ----
// error: 4:17-24: type 'boolean' not found
